# midi-legend-sdl2

./: CMakeLists.txt  LICENSE.md  README.md
application/: CMakeLists.txt
application/src/: common.c  common.h  main.c  settings.h
application/src/game/: asset_manager.c  asset_manager.h  input.c  input.h
application/src/game/level/: level_canvas.c  level_canvas.h  level_scene.c  level_scene.h  track.c  track.h
application/src/game/title/: title_canvas.c  title_canvas.h  title_scene.c  title_scene.h
application/src/utils/: math.c  math.h  text.c  text.h  timer.c  timer.h
assets/: LICENSES.md
